// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders basic Table with custom cells 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <div
          className="sortingContainer"
        >
          <div
            className="sortingTitle"
          >
            testHeader
          </div>
          <div
            className="sorting"
          >
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                />
              </svg>
            </button>
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                />
              </svg>
            </button>
          </div>
        </div>
      </th>
      <th>
        <div
          className="sortingContainer"
        >
          <div
            className="sortingTitle"
          >
            testHeader2
          </div>
          <div
            className="sorting"
          >
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                />
              </svg>
            </button>
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                />
              </svg>
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="/"
          onClick={[Function]}
        >
          test
        </a>
      </td>
      <td>
        <span>
          test2
          $ - extra text
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Renders basic Table with sorting 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <div
          className="sortingContainer"
        >
          <div
            className="sortingTitle"
          >
            testHeader
          </div>
          <div
            className="sorting"
          >
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                />
              </svg>
            </button>
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                />
              </svg>
            </button>
          </div>
        </div>
      </th>
      <th>
        <div
          className="sortingContainer"
        >
          <div
            className="sortingTitle"
          >
            testHeader2
          </div>
          <div
            className="sorting"
          >
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 347.428c0 10-8.286 18.286-18.286 18.286h-256c-10 0-18.285-8.286-18.285-18.286 0-4.857 2-9.428 5.428-12.857l128-128c3.429-3.429 8-5.428 12.857-5.428s9.428 2 12.857 5.428l128 128c3.428 3.428 5.428 8 5.428 12.857z"
                />
              </svg>
            </button>
            <button
              className="sortingButton"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="sortingArrowIcon"
                viewBox="0 0 293 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.572 201.143c0 4.857-2 9.429-5.428 12.857l-128 128c-3.429 3.428-8 5.428-12.857 5.428s-9.429-2-12.857-5.428l-128-128c-3.429-3.429-5.428-8-5.428-12.857 0-10 8.286-18.285 18.285-18.285h256c10 0 18.286 8.286 18.286 18.286z"
                />
              </svg>
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        test
      </td>
      <td>
        test2
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Renders basic Table without crashing 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <div
          className="sortingContainer"
        >
          <div
            className="sortingTitle"
          >
            testHeader
          </div>
          
        </div>
      </th>
      <th>
        <div
          className="sortingContainer"
        >
          <div
            className="sortingTitle"
          >
            testHeader2
          </div>
          
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        test
      </td>
      <td>
        test2
      </td>
    </tr>
  </tbody>
</table>
`;
